# ProjectSolver

./: README.md  build_sidecar.py  index.html  package.json  pyproject.toml  vite.config.ts
.github/workflows/: build.yml
core_py/psai/: __init__.py  __main__.py  _encoding_safety.py  api_server.py  state_store.py
core_py/psai/llm/: prompts.py  provider.py
core_py/psai/logic/: json_utils.py  orchestrator.py  syntax_gate.py
core_py/psai/solvers/: mus.py  z3_backend.py
core_py/tests/: test_api_server_llm_config.py  test_encoding_safety.py  test_gemini_provider.py  test_llm_config_store.py  test_mus.py  test_orchestrator.py  test_smoke.py  test_solver.py  test_state.py  test_workflow.py
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
