[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectsolver-ai-core"
version = "0.1.0"
description = "ProjectSolver AI core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProjectSolver AI" }]
dependencies = [
  "z3-solver>=4.12.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "pyinstaller>=6.20.0",
]

[tool.setuptools]
package-dir = {"" = "core_py"}

[tool.setuptools.packages.find]
where = ["core_py"]
include = ["psai*"]

[tool.pytest.ini_options]
testpaths = ["core_py/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
